# groonga-command-token-count

./: .gitignore  Makefile.am  README.md  clean.sh  configure.ac  groonga-command-token-count.pc.in
commands/: Makefile.am  token_count.c
test/suite/: limit.expected  limit.test  ratio.expected  sortby_key_asc.expected  sortby_key_desc.expected  sortby_key_desc.test  sortby_value_desc.expected  token_size_2.test  token_size_all.test
test/suite/document_count/: limit.expected  limit.test  ratio.expected  ratio.test  threshold.expected  threshold.test  token_size_all.expected  token_size_all.test
test/suite/invalid/: not_index_column.expected  not_index_column.test
test/suite/token_count/: ctype_alpha.expected  ctype_alpha.test  ctype_default.expected  ctype_default.test  ctype_ja.expected  ctype_ja.test  prefix.expected  prefix.test  prolong.expected  prolong.test  ratio.test  sortby_key_asc.test  sortby_value_asc.expected  sortby_value_asc.test  sortby_value_desc.test  threshold.expected  threshold.test  token_size_2.expected  token_size_all.expected
test/suite/token_count/invalid/: missing_table_name.expected  missing_table_name.test
